atualização do arquivo
atualização do arquivo

--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -11,31 +11,44 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1>WEB <span class="branco">DESIGN</span></h1>
-            <H3>HTML5 &nbsp;&nbsp; CSS3 &nbsp; &nbsp; PHP &nbsp;&nbsp; PYTHON &nbsp;&nbsp; JAVASCRIPT &nbsp;&nbsp;
-                WAMPSERVER &nbsp;&nbsp; SQLSERVER</H3>
+            <h1>WEB <span class="red">DESIGN</span></h1>
+            <h3>
+                <a class="linkedecoration" href="">HTML5 </a>&nbsp;&nbsp;
+                <a class="linkedecoration" href="">CSS3</a> &nbsp; &nbsp;
+                <a class="linkedecoration" href="">PHP</a> &nbsp;&nbsp;
+                <a class="linkedecoration" href="">PYTHON</a> &nbsp;&nbsp;
+                <a class="linkedecoration" href="">JAVASCRIPT</a> &nbsp;&nbsp;
+                <a class="linkedecoration" href=""> WAMPSERVER </a> &nbsp;&nbsp;
+                <a class="linkedecoration" href="">SQLSERVER</a> a:hover{
+                background: #fdf6be;
+                }
+            </h3>
         </header>
 
         <aside class=" aside aside1">
-            <img src="imagem/web-designer-aprender.jpg" class="bordered-image" width="380px" height="400px"
+            <img src="imagem/web-designer-aprender.jpg" class="bordered-image" width="380px" height="360px"
                 alt="código da linguagem">
-
+            <h6>Código font HTML</h6>
         </aside>
         <article class="main">
             <div>
                 <br>
-                <li>Olá, eu sou Eli Santos, formado em Análise e Desenvolvimento de Sistemas, no Instituto Federal,
-                    Campus
-                    Campos do Jordão- SP.</li>
-                <li>Trabalho com desenvolvimento e criação de sites, utilizo as tecnologias , HTML, CSS, PHP,
-                    JavaScript,
-                    Python, Bootstrap e SqlServer.</li>
-                <li>Sou um grande admirador de tecnologia e estou sempre buscando novos conhecimentos nessa área.</li>
-                <li>Estou sempre a frente de enfrentar os desafios que percebo que vale a pena investir.</li>
+                "Com o HTML, CSS3, PHP, Python, Bootstrap e o WampServer,
+                o mundo da criação web se torna infinitamente expansível. HTML
+                e CSS3 fornecem a base sólida para a estrutura e o estilo de
+                qualquer página web, enquanto PHP e Python oferecem a potência
+                necessária para torná-la dinâmica e interativa. Bootstrap facilita
+                a criação de layouts responsivos e elegantes, garantindo uma
+                experiência consistente em diferentes dispositivos. E com o WampServer,
+                o desenvolvimento local se torna rápido e eficiente, permitindo que
+                desenvolvedores construam e testem seus projetos com facilidade.
+                Juntas, essas tecnologias capacitam os criadores a dar vida a suas ideias,
+                moldando o futuro da web com inovação e excelência."
             </div>
         </article>
         <aside class=" aside aside2">
-            <img src="imagem/qrcode.png" class="bordered-image" width="380px" height="400px" alt="Qrcode">
+            <img src="imagem/qrcode.png" class="bordered-image" width="360px" height="360px" alt="Qrcode">
+            <h6>Escaneie o código acima e obtenha informações.</h6>
         </aside>
 
 
